[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Parent/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Modes/BadBall/BadBall.gd" type="Script" id=2]
[ext_resource path="res://Misc/Fonts/Neufreit-ExtraBold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="BadBall" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Scores" type="MarginContainer" parent="UI" index="0"]
margin_left = 20.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Scores" index="0"]
margin_right = 56.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Scores/VBoxContainer" index="0"]
margin_right = 56.0
margin_bottom = 38.0
custom_constants/separation = 20

[node name="Team1" type="Label" parent="UI/Scores/VBoxContainer/HBoxContainer" index="0"]
margin_right = 18.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.811765, 1, 1 )
text = "0"
align = 1

[node name="Team2" type="Label" parent="UI/Scores/VBoxContainer/HBoxContainer" index="1"]
margin_left = 38.0
margin_right = 56.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 1

[node name="TimeText" type="Label" parent="UI/Scores/VBoxContainer" index="1"]
margin_top = 42.0
margin_right = 56.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "60"
align = 1

[node name="Time" type="Timer" parent="." index="4"]
wait_time = 60.0
one_shot = true

[node name="Second" type="Timer" parent="." index="5"]

[node name="Respawn" type="Timer" parent="." index="6"]
wait_time = 5.0
one_shot = true

[node name="Team1Spawn" type="Position2D" parent="." index="7"]

[node name="Team2Spawn" type="Position2D" parent="." index="8"]
[connection signal="timeout" from="Time" to="." method="_on_Time_timeout"]
[connection signal="timeout" from="Second" to="." method="_on_Second_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_Respawn_timeout"]
